# profanity2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  profanity.cl
src/: commands.rs  compute_unit.rs  config.rs  dispatcher.rs  macros.rs  main.rs  precomp.rs  speed_meter.rs  types.rs  utils.rs
