[package]
name = "profanity2-rs"
version = "0.0.1"
edition = "2021"
authors = ["Tony Ke <thagki9@outlook.com>"]
repository = "https://github.com/THaGKI9/profanity2-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
console = "0.15.5"
ocl = { version = "0.19.4", features = ["opencl_version_1_2" ] }
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std"] }
sha3 = "0.10.6"
